# poetry-cython-demo

./: build.py  pyproject.toml  setup.py
poetry_cython_demo/: cython_code.c
