[tool.poetry]
name = "poetry-cython-demo"
description = ""
authors = []
version = "0.1.0"
build = "build.py"
exclude = ["poetry_cython_demo/compiled", "poetry_cython_demo/*.pyx"]
include = [
    { path = "poetry_cython_demo/compiled/**/*", format = "sdist" },
    { path = "poetry_cython_demo/*.pyx", format = "sdist" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"

[tool.poetry.dev-dependencies]
cython = "^0.29.26"

[build-system]
requires = ["poetry-core>=1.0.0", "cython", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
